<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fleury.marc.moodtracker.controller.HistoryActivity"
    android:background="@color/warm_grey"
    android:weightSum="7">


    <RelativeLayout
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@color/banana_yellow">
         <TextView
             android:id="@+id/activity_history_seven"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="top"
             android:paddingLeft="5dp"
             android:paddingRight="5dp"
             android:paddingTop="5dp"
             android:text="@string/history_seven"/>
         <ImageView
             android:id="@+id/activity_history_com_seven"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignEnd="@id/activity_history_seven"
             android:layout_centerVertical="true"
             android:layout_marginEnd="20dp"
             android:src="@drawable/ic_comment_black_48px"
             android:visibility="gone"
             tools:visibility="visible"/>
    </RelativeLayout>


    <RelativeLayout
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@color/faded_red">
        <TextView
            android:id="@+id/activity_history_six"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:paddingTop="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/history_six"/>
        <ImageView
            android:id="@+id/activity_history_com_six"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/activity_history_six"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_comment_black_48px"
            android:visibility="gone"
            tools:visibility="visible"/>
    </RelativeLayout>


    <RelativeLayout
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="0dp">
        <TextView
            android:id="@+id/activity_history_five"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:paddingTop="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/history_five"/>
        <ImageView
            android:id="@+id/activity_history_com_five"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/activity_history_five"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_comment_black_48px"
            android:visibility="gone"
            tools:visibility="visible"/>
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:id="@+id/activity_history_four"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:paddingTop="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/history_four"/>
        <ImageView
            android:id="@+id/activity_history_com_four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/activity_history_four"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_comment_black_48px"
            android:visibility="gone"
            tools:visibility="visible"/>
    </RelativeLayout>


    <RelativeLayout
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="0dp">
        <TextView
            android:id="@+id/activity_history_three"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:paddingTop="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/history_three"/>
        <ImageView
            android:id="@+id/activity_history_com_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/activity_history_three"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_comment_black_48px"
            android:visibility="gone"
            tools:visibility="visible"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="0dp">
        <TextView
            android:id="@+id/activity_history_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:paddingTop="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/history_two"/>
        <ImageView
            android:id="@+id/activity_history_com_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/activity_history_two"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_comment_black_48px"
            android:visibility="gone"
            tools:visibility="visible"/>
    </RelativeLayout>


    <RelativeLayout
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="0dp">
        <TextView
            android:id="@+id/activity_history_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:paddingTop="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/history_one"/>
        <ImageView
            android:id="@+id/activity_history_com_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/activity_history_one"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_comment_black_48px"
            android:visibility="gone"
            tools:visibility="visible"/>
    </RelativeLayout>


</LinearLayout>